--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
   <div align="center">
     <img src="https://s3.ap-south-1.amazonaws.com/www.basava.com/aar_logo_final.png" style="max-width: 20%;">
-    <h1>Congratulations!!! The Code Build is Successfully Executed Using AWS CI/CD </h1>
-      <h2>Welcome to this page| The source code is in GitHub, If any changes in the code automatically code build will happen </h2>
+    <h1>Successfully Executed Using AWS CI/CD </h1>
+      <h2>Welcome to this page!!!</h2>
     <h3>This application was deployed using AWS CodeDeploy(CI/CD).</h3>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
